- fix some layout issues after upgrading to bootstrap stable 4.1.0

--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -65,7 +65,7 @@
         }
     }
 
-    .col-xs-12, .col-sm-12 {
+    .col-12, .col-sm-12 {
         position: static;
     }
 
